# crew

ai_latest_development/: pyproject.toml  report.md
ai_latest_development/src/ai_latest_development/: crew.py  main.py
ai_news/src/ai_news/: crew.py  main.py
guide_creator_flow/: pyproject.toml
legal_doc_review/: Addoc.md  README.md  pyproject.toml  report.md
legal_doc_review/outputs/: clauses_output.md  final_risks_summary.md  final_summary.md  report copy.md  report.md  risk_report.md  updated_contract.md  updated_contract_legal_document.txt  updated_contract_nda_sample.txt
legal_doc_review/outputs/chunks/: chunk_1.md  chunk_2.md  chunk_3.md  chunk_4.md
legal_doc_review/src/legal_doc_review/: chatbot.py  crew.py  main.py
legal_doc_review/src/legal_doc_review/config/: agents.yaml  tasks.yaml
legal_doc_review/src/legal_doc_review/processors/: chunk_processor.py  question_processor.py  result_merger.py
legal_doc_review/src/legal_doc_review/samples/: confidentiality_agreement.txt  contractor_agreement.txt  legal_document.txt  nda_sample.txt  saas_agreement.txt
legal_doc_review/src/legal_doc_review/tools/: ai_contract_updater.py  contract_updater_tool.py  document_chunker_tool.py  document_loader_tool.py  question_generator_tool.py
