[project]
name = "legal_doc_review"
version = "0.1.0"
description = "legal_doc_review using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
legal_doc_review = "legal_doc_review.main:run"
run_crew = "legal_doc_review.main:run"
train = "legal_doc_review.main:train"
replay = "legal_doc_review.main:replay"
test = "legal_doc_review.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
